@@ -1,29 +1,20 @@
 language: python
-python: 2.7
-env:
-    - TOX_ENV=py26
-    - TOX_ENV=py27
-    - TOX_ENV=py35
-    - TOX_ENV=flake8
+dist: bionic
+python:
+    - "3.6"
+    - "3.7"
+    - "3.8"
+    - "3.9"
 before_install:
     # Travis has got a default config, that we override for our tests.
     # See: https://github.com/travis-ci/travis-ci/issues/7940
     - sudo rm -f /etc/boto.cfg
-install:
-    - pip install tox
+    - pip install -U pip setuptools
+    - pip install -U tox tox-travis
 script:
-    - tox -e $TOX_ENV
-
+    - tox
 matrix:
+  fast_finish: true
   include:
-    - python: 3.6
-      env:
-        - TOX_ENV=py36
-    - python: 3.6
-      env:
-        - TOX_ENV=flake8
-    - python: 3.7
-      dist: xenial
-      sudo: true
-      env:
-        - TOX_ENV=py37
+  - python: 3.8
+    env: TOXENV=flake8
