@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py35,py36,py37,flake8
+envlist = py36,py37,py38,py39,flake8
 skip_missing_interpreters = True
 
 [testenv]
