@@ -1,7 +1,10 @@
 0.4.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+**Breaking changes**
+
+- Drop support for Python 2.6, Python 2.7 and Python 3.5
+- Add support for Python 3.6+
 
 
 0.3.1 (2020-06-04)
